(library
 (name reading_list)
 (libraries
  lwt
  containers
  dream
  dream-html
  cohttp
  cohttp-lwt
  caqti-driver-sqlite3
  caqti
  caqti-lwt
  caqti-lwt.unix
  yojson
  timedesc)
 (preprocess
  (pps ppx_string ppx_compare ppx_yojson_conv ppx_blob))
 (preprocessor_deps
   (glob_files resources/*)))
